# PhotoCampus

./: .env.example  .gitignore  README.md  comprehensive_graphql_testing_guide.md  deployment_guide.md  graphql_api_guide.md  graphql_playground_samples.md  hello.py  home_feed_explained.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_graphql.py
erd_diagrams/: photocampus.drawio  photocampus_erd.xml
organizations/: __init__.py  admin.py  api.py  apps.py  models.py  schema.py  tasks.py  urls.py  views.py
organizations/migrations/: 0001_initial.py  0002_alter_company_created_at_alter_company_industry_and_more.py  0003_invitation_email_sent_invitation_last_email_attempt.py
photocampus/: asgi.py  celery.py  schema.py  settings.py  urls.py  utils.py  views.py  wsgi.py
photocampus/templates/: base.html  explore_organizations.html  home_feed.html  login.html  organization_detail.html  organization_not_found.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  post_detail.html  register.html
photocampus/templates/email/: invitation.html
posts/: admin.py  api.py  models.py  schema.py  serializers.py  tasks.py  tests.py  urls.py
posts/management/commands/: cleanup_old_feeds.py  rebuild_feeds.py
posts/migrations/: 0001_initial.py  0002_share.py  0003_post_company_post_department_post_event_date_and_more.py  0004_follow.py  0005_alter_comment_content_alter_comment_created_at_and_more.py  0006_feedentry.py  0007_celebritypostcache.py
static/css/: images.css
tests/: test_api.py  test_graphql.py
