[project]
name = "photocampus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-graphql-jwt>=0.4.0",
    "graphene-django>=3.2.2",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "ruff>=0.9.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
